# call-center-ai-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/: main.py
app/agent/: llm_extractor.py  orchestrator.py  prompts.py  schemas.py  tools.py
app/api/: routes_calls.py
app/data/: store.py
app/observability/: metrics.py
app/voice/: simulator.py
docs/: architecture.md  business-overview.md  runbook.md  technical-overview.md  user-guide.md
tests/: test_api.py  test_extraction.py
